# Terminal-Games

./: .clang-format  .clang-tidy  .editorconfig  .gitattributes  .gitignore  .gitmodules  .markdownlint.yml  .prettierignore  .prettierrc.yml  .travis.yml  .yamllint.yml  CMakeLists.txt  CMakeSettings.json  Doxyfile  README.md  cspell.yml  package-lock.json  package.json  requirements.txt
.github/workflows/: Build.yml  ContinuousDeployment.yml  ContinuousIntegration.yml  Linting-ps1.yml  Release.yml  cmake.yml  continuous_deployment.yml  continuous_integration.yml
Battleships/: Battleships.cpp  Battleships.hpp  main.cpp
Chess/: Chess.cpp  Chess.hpp  main.cpp
Hangman/: Hangman.cpp  Hangman.hpp  Words.txt  main.cpp
TicTacToe/: TicTacToe.cpp  TicTacToe.hpp  main.cpp
battleships/: Battleships.cpp  Battleships.hpp  battleships.cpp  battleships.hpp  main.cpp
chess/: Chess.cpp  Chess.hpp  main.cpp
docs/custom/: header.html
docs/html/: _battleships_8cpp_source.html  _battleships_8hpp_source.html  _game_8hpp_source.html  _game_information_8hpp_source.html  _globals_8hpp_source.html  _hangman_8cpp_source.html  _hangman_8hpp_source.html  _main_menu_8cpp_source.html  _main_menu_8hpp_source.html  _page_builder_8cpp_source.html  _page_builder_8hpp_source.html  _terminal_8cpp_source.html  _terminal_8hpp_source.html  _tic_tac_toe_8cpp_source.html  _tic_tac_toe_8hpp_source.html  annotated.html  annotated_dup.js  bug.html  class_terminal_games_1_1_battleships-members.html  class_terminal_games_1_1_battleships.html  class_terminal_games_1_1_battleships.js  class_terminal_games_1_1_game-members.html  class_terminal_games_1_1_game.html  class_terminal_games_1_1_game.js  class_terminal_games_1_1_hangman-members.html  (+104 more)
functions/: Functions.cpp  Functions.hpp  functions.cpp  functions.hpp
hangman/: Hangman.cpp  Hangman.hpp  hangman.cpp  hangman.hpp  main.cpp
include/: Battleships.hpp  Chess.hpp  Constants.hpp  Exceptions.hpp  Game.hpp  Hangman.hpp  MainMenu.hpp  Quit.hpp  QuitToMainMenu.hpp  Terminal.hpp  TicTacToe.hpp  battleships.hpp  functions.hpp  game.hpp  hangman.hpp  mainmenu.hpp  pch.hpp  play.hpp  terminal.hpp  tictactoe.hpp
modules/: Build.psm1  PSScriptAnalyzerSettings.psd1  Terminal-Games.psd1  TerminalGames.psd1
resources/: Words.txt
scripts/: Dependencies.psm1  Helpers.psm1  Linters.psd1  Linters.psm1  Terminal-Games.psd1  lint-gitattributes-file.ps1  lintGitAttributes.ps1
source/: Battleships.cpp  BattleshipsPlay.cpp  BattleshipsTest.cpp  Chess.cpp  ChessPlay.cpp  ChessTest.cpp  Hangman.cpp  HangmanPlay.cpp  HangmanTest.cpp  MainMenu.cpp  Terminal.cpp  TicTacToe.cpp  TicTacToePlay.cpp  TicTacToeTest.cpp  battleships.cpp  functions.cpp  hangman.cpp  main.cpp  mainmenu.cpp  terminal.cpp  tictactoe.cpp
testcode/: TestBattleships.cpp  TestHangman.cpp
tests/: Battleships-Test-Plan.md  Hangman-Test-Plan.md  Main-Menu-Test-Plan.md  Tic-Tac-Toe-Test-Plan.md
tictactoe/: TicTacToe.cpp  TicTacToe.hpp  main.cpp  tictactoe.cpp  tictactoe.hpp
(+198 files in other folders)
